--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,4 +1,8 @@
-#nixpacks.toml
+[phases.setup]
+nixPkgs = ["python311"]
+
+[phases.build]
+cmds = ["pip install -r requirements.txt"]
 
 [start]
 cmd = "gunicorn app:app"
